--- a/src/App.css
+++ b/src/App.css
@@ -19,14 +19,20 @@ input {
   width: 200px
 }
 
+.Page {
+  display: block;
+  align-items: center;
+}
+
 .Results {
   background-color: white;
-  margin-left: 150px;
-  margin-right: 150px;
-  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5%;
   border-radius: 8px;
   color: black;
   padding: 10px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  width: 60%;
 }
 
