--- a/src/componets/NewsArticles.css
+++ b/src/componets/NewsArticles.css
@@ -13,6 +13,7 @@
     width: 20%;
     border: 1px solid #fff;
     border-radius: 5px;
+    background-color: rgba(250, 235, 215, 0.186);
 }
 
 .card-content
@@ -22,4 +23,13 @@
 
 .card-content p{
     text-align: left;
+}
+
+.news-card a{
+    text-transform: capitalize;
+    text-decoration: none;
+    border:1px solid #ccc;
+    padding: 4px;
+    border-radius: 50px;
+    color: yellow;
 }
