--- a/src/componets/NewsArticles.css
+++ b/src/componets/NewsArticles.css
@@ -1,12 +1,7 @@
 .article-layout {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
-
-}
-
-.news-img {
-    width: 100%;
-    height: 200px;
 }
 
 .news-card {
@@ -32,4 +27,27 @@
     padding: 4px;
     border-radius: 50px;
     color: yellow;
+}
+
+.news-img {
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .news-card {
+        width: 90%;
+        margin-bottom: 20px;
+    }
+
+    .card-content {
+        padding: 5px;
+    }
+
+    .news-img {
+        height: 100px;
+    }
+
+    .news-card a {
+        font-size: 10px;
+    }
 }
