--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,8 @@ body {
 }
 
 .calendarIcon {
-  width: 20%;
-  height: 80%;
-  position: relative;
-  top: 4px;
-  right: 70px;
+  width: 100%;
+  height: 100%;
 }
 
 input {
@@ -38,17 +35,24 @@ input {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
-.enter-city-div{
+.pic-container {
+  width: 20px;
+  height: 20px;
+  position: relative;
+  right: 30px;
+  top: 7px;
+}
+
+.date-picker-div {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  width: 15%;
+  justify-content: center;
+  width: 84%;
   margin: 0 auto;
 }
 
 .react-datepicker-wrapper{
   width: fit-content !important;
-  
 }
 
 .react-datepicker__input-container input{
