--- a/src/App.css
+++ b/src/App.css
@@ -35,12 +35,27 @@ input {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
+.weather-box{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.bottom-weather-box {
+  width: 20%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
 .pic-container {
   width: 20px;
   height: 20px;
   position: relative;
-  right: 30px;
-  top: 7px;
+  left: 54.3vw;
+  bottom: 27px;
 }
 
 .date-picker-div {
