--- a/src/App.css
+++ b/src/App.css
@@ -30,26 +30,22 @@ input {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
-.themed-background {
+.themed-background,
+.overlay {
   position: fixed;
 
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+}
 
+.themed-background {
   z-index: -1;
 }
 
 .overlay {
-  position: absolute;
-
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-  background: hsla(0 0% 0% / 25%);
+  background: hsla(0 0% 0% / 30%);
 }
 
 .themed-background img {
@@ -58,4 +54,48 @@ input {
 
   display: block;
   object-fit: cover;
+}
+
+.modal-content,
+.modal-animated-background {
+  background: #133667;
+
+  position: fixed;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-animated-background {
+  width: 0;
+  height: 0;
+
+  transition-property: height, width;
+  transition-duration: 300ms;
+  transition-timing-function: steps(3, jump-both);
+}
+
+.modal-animated-background.full {
+  width: 100%;
+  height: 100%;
+}
+
+.modal-content {
+  width: 90vw;
+  max-width: max-content;
+
+  padding: 40px 64px;
+}
+
+.modal-content h1 {
+  margin-top: 0;
+}
+
+.modal-content input {
+  box-sizing: border-box;
+  width: 100%;
+
+  padding: 16px;
+  font-size: 20px;
 }
