--- a/src/App.css
+++ b/src/App.css
@@ -40,4 +40,10 @@ input {
   display: inline-block;
   font-size: 16px;
   margin: 3px;
+  border-radius: 4px;
+}
+
+.buttons:hover {
+  padding: 15px 27px;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
