--- a/src/App.css
+++ b/src/App.css
@@ -46,4 +46,5 @@ input {
 .buttons:hover {
   padding: 15px 27px;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  cursor: pointer;
 }
