--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.fill-height {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
 body {
     background-color: #133667;
     color: white;
@@ -12,11 +24,13 @@ body {
   margin-top: 20px;
 }
 
+
+
 input {
   padding: 10px;
   border-radius: 4px;
   border: 10px;
-  width: 200px
+  width: 50%
 }
 
 .Page {
@@ -24,15 +38,20 @@ input {
   align-items: center;
 }
 
+.Page h2 {
+  font-size: 2vmax;
+  margin: 1%;
+}
+
 .Results {
   background-color: white;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 5%;
+  margin-top: 2%;
   border-radius: 8px;
   color: black;
-  padding: 10px;
+  padding: 4%;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  width: 60%;
+  width: 70%;
 }
 
