--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ input {
 .Specific-Results {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   background-color: white;
   margin-left: 150px;
   margin-right: 150px;
@@ -134,15 +135,13 @@ td {
   height: 100%;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 658px) {
   .Specific-Results {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-}
 
-@media only screen and (max-width: 658px) {
   .weather-icon-container{
     width: 100%;
   }
