--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,44 @@
 body {
-    background-color: #133667;
-    color: white;
-    text-align: center;
+  background-color: #133667;
+  color: white;
+  text-align: center;
+  padding-bottom: 20px;
 }
 
 .logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;
-  margin-top: 20px;
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 20%;
+margin-top: 20px;
+}
+
+.weather-area{
+display: flex;
+flex-direction: column;
+align-items: center;
 }
 
 input {
-  padding: 10px;
-  border-radius: 4px;
-  border: 10px;
-  width: 200px
+padding: 10px;
+border-radius: 4px;
+border-bottom-left-radius: 0;
+border-bottom-right-radius: 0;
+border: 10px;
+width: 300px;
 }
 
+
 .Results {
-  background-color: white;
-  margin-left: 150px;
-  margin-right: 150px;
-  margin-top: 20px;
-  border-radius: 8px;
-  color: black;
-  padding: 10px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+background-color: white;
+margin-left: 150px;
+margin-right: 150px;
+margin-top: 28px;
+border-radius: 8px;
+color: black;
+padding: 20px;
+width: 280px;
+box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
+
 
