--- a/src/AirPollution.css
+++ b/src/AirPollution.css
@@ -1,10 +1,8 @@
 .container {
-    display: flex;
     width: 30%;
     margin-top: 20px;
-    padding: 10px;
+    padding: 5px;
     box-shadow: 0 3px 8px rgba(170,230,239,0.8), 0 3px 8px rgba(170,230,239,0.8);
-    margin-left: 150px;
     border-radius: 8px;
 }
 
@@ -18,6 +16,6 @@
 
 .airpol_img {
     flex: 1;
-    max-width: 30%;
+    width: 15%;
 }
 
