--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,8 @@ input {
 }
 
 .themed-background,
-.overlay {
+.overlay,
+.modal-wrapper {
   position: fixed;
 
   top: 0;
@@ -56,39 +57,26 @@ input {
   object-fit: cover;
 }
 
-.modal-content,
-.modal-animated-background {
-  background: #133667;
+.modal-wrapper {
+  display: grid;
+  place-items: center;
 
-  position: fixed;
-
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.modal-animated-background {
-  width: 0;
-  height: 0;
-
-  transition-property: height, width;
-  transition-duration: 300ms;
-  transition-timing-function: steps(3, jump-both);
-}
-
-.modal-animated-background.full {
-  width: 100%;
-  height: 100%;
+  background: rgba(0, 0, 0, 0.28);
 }
 
 .modal-content {
-  width: 90vw;
-  max-width: max-content;
+  background: #232527;
 
-  padding: 40px 64px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  height: 50vh;
+
+  padding: 24px;
 }
 
-.modal-content h1 {
+.modal-content p {
   margin-top: 0;
 }
 
@@ -96,6 +84,24 @@ input {
   box-sizing: border-box;
   width: 100%;
 
-  padding: 16px;
-  font-size: 20px;
+  padding: 8px;
+  font-size: 16px;
+}
+
+.members {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+
+  padding: 10px;
+}
+
+.member img {
+  --size: 10vmin;
+  width: var(--size);
+  height: var(--size);
+  object-fit: cover;
+
+  border-radius: 50%;
+  border: 5px solid white;
 }
